# rules_rust

./: .bazelignore  MODULE.bazel
cargo/private/: cargo_build_script.bzl  cargo_build_script_wrapper.bzl  cargo_dep_env.bzl
cargo/private/cargo_build_script_runner/: bin.rs  cargo_manifest_dir.rs
cargo/tests/cargo_build_script/location_expansion/: BUILD.bazel  build.rs  rlocationpath_failure_test.bzl  test.rs
cargo/tests/cargo_build_script/transitive_data/: transitive_data_test.bzl
crate_universe/: extensions.bzl
crate_universe/private/: crate.bzl
crate_universe/src/: config.rs  lockfile.rs  rendering.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/utils/: starlark.rs
crate_universe/src/utils/starlark/: select_scalar.rs
examples/cross_compile_nix/bazel/toolchains/rust/aarch64-apple-darwin/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/aarch64-apple-ios/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/aarch64-linux-android/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/aarch64-unknown-linux-gnu/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/wasm32-unknown-unknown/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/wasm32-wasip1/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/x86_64-apple-darwin/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/x86_64-pc-windows-msvc/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/x86_64-unknown-linux-gnu/: BUILD.bazel
examples/cross_compile_nix/bazel/toolchains/rust/x86_64-unknown-nixos-gnu/: BUILD.bazel
extensions/bindgen/private/: bindgen.bzl
extensions/prost/: BUILD.bazel  defs.bzl  extensions.bzl
extensions/prost/private/: BUILD.bazel  internal_extensions.bzl  prost.bzl  prost_transform.bzl
extensions/prost/private/tests/camel_case/: BUILD.bazel
extensions/prost/private/tests/keywords/: BUILD.bazel
extensions/prost/private/tests/nesting/: BUILD.bazel
extensions/prost/private/tests/nocompile_well_known_types/: BUILD.bazel  transition.bzl
extensions/prost/private/tests/package_imports/: BUILD.bazel
extensions/prost/private/tests/package_names/: BUILD.bazel
extensions/prost/private/tests/remote/: BUILD.bazel
extensions/prost/private/tests/same_proto_name/package1/: BUILD.bazel
extensions/prost/private/tests/same_proto_name/package2/: BUILD.bazel
extensions/prost/private/tests/same_proto_name/package3/: BUILD.bazel
extensions/prost/private/tests/sanitized_modules/: BUILD.bazel
extensions/prost/private/tests/services/echo/: BUILD.bazel
extensions/prost/private/tests/services/helloworld/: BUILD.bazel
extensions/prost/private/tests/transform/: BUILD.bazel
extensions/prost/private/tests/transform/b/: BUILD.bazel
extensions/prost/private/tests/transform/b/c/: BUILD.bazel
extensions/prost/private/tests/transitive_dependencies/: BUILD.bazel
extensions/prost/private/tests/transitive_dependencies/b/: BUILD.bazel
extensions/prost/private/tests/transitive_dependencies/b/c/: BUILD.bazel
extensions/prost/private/tests/types/: BUILD.bazel
extensions/prost/private/tests/well_known_types/: BUILD.bazel
extensions/pyo3/: BUILD.bazel  README.md  defs.bzl
extensions/pyo3/private/: BUILD.bazel  internal_extensions.bzl  pyo3.bzl  pyo3_toolchain.bzl
extensions/pyo3/test/compilation_modes/: BUILD.bazel  string_sum_current_test.py
extensions/pyo3/test/module_prefix/: BUILD.bazel  module_prefix_import_test.py
extensions/pyo3/test/module_prefix_imports/: BUILD.bazel
extensions/pyo3/test/runfiles/: BUILD.bazel  reader.rs  reader_helper.rs  reader_test.py
extensions/pyo3/test/string_sum/: BUILD.bazel  string_sum_test.py
extensions/pyo3/test/stubs/: BUILD.bazel  string_sum_test.py
extensions/pyo3/test/wheel/: BUILD.bazel
extensions/pyo3/toolchains/: BUILD.bazel
extensions/wasm_bindgen/private/: wasm_bindgen_test.bzl
rust/: defs.bzl  extensions.bzl  toolchain.bzl
rust/platform/: BUILD.bazel  triple_mappings.bzl
rust/private/: BUILD.bazel  clippy.bzl  per_crate_flag_trim.bzl  providers.bzl  repository_utils.bzl  rust.bzl  rust_analyzer.bzl  rustc.bzl  rustdoc.bzl  rustdoc_test.bzl  rustfmt.bzl  test_sharding_wrapper.bat  test_sharding_wrapper.sh  unpretty.bzl  utils.bzl
rust/private/rustdoc/: BUILD.bazel  rustdoc_test_runner.cc
rust/settings/: settings.bzl
test/integration/cc_common_link/unit/: cc_common_link_test.bzl
test/pipelining_bootstrap_gate/: BUILD.bazel  unstable.rs
test/process_wrapper/: BUILD.bazel  rustc_output_format.rs
test/toolchain/: toolchain_test.bzl
test/unit/cc_info/: cc_info_test.bzl
test/unit/cc_toolchain_runtime_lib/: cc_toolchain_runtime_lib_test.bzl
test/unit/consistent_crate_name/: with_modified_crate_name.bzl
test/unit/force_all_deps_direct/: generator.bzl
test/unit/metadata_output_groups/: metadata_output_groups.bzl
test/unit/pipelined_compilation/: pipelined_compilation_test.bzl  wrap.bzl
test/unit/platform_triple/: platform_triple_test.bzl
test/unit/rust_test_codegen_disambiguation/: codegen_disambiguation_test.bzl
test/unit/rustdoc/: rustdoc_unit_test.bzl
test/unit/test_sharding/: BUILD.bazel  fake_libtest_binary.sh  sharded_test.rs  test_sharding.bzl  test_sharding_wrapper_hashes_sorted_names.sh
test/unit/toolchain/: toolchain_test.bzl
tools/rust_analyzer/: BUILD.bazel
util/process_wrapper/: BUILD.bazel  main.rs  options.rs
