load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_rust//rust:defs.bzl", "rust_library_group", "rust_test")
load("//extensions/prost:defs.bzl", "rust_prost_toolchain")
load(":legacy_proto_toolchain.bzl", "legacy_proto_toolchain")
load(":prost.bzl", "RUST_EDITION", "current_prost_runtime")

exports_files(["protoc_wrapper.rs"])

current_prost_runtime(
    name = "current_prost_runtime",
)

bool_flag(
    name = "compile_well_known_types",
    build_setting_default = True,
)

config_setting(
    name = "compile_well_known_types_setting",
    flag_values = {
        ":compile_well_known_types": "true",
    },
)

alias(
    name = "protoc_wrapper",
    actual = "@rules_rs//rs/private/prost:protoc_wrapper",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "protoc_wrapper_test",
    crate = ":protoc_wrapper",
    edition = RUST_EDITION,
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//extensions/prost:__pkg__"],
    deps = [
        "//extensions/prost/private/3rdparty:bzl_lib",
        "@rules_proto//proto:defs",
        "@rules_proto//proto:repositories",
        "@rules_rust//rust:bzl_lib",
    ],
)

rust_library_group(
    name = "prost_runtime",
    visibility = [
        "//extensions/prost:__subpackages__",
    ],
    deps = [
        "//extensions/prost/private/3rdparty/crates:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    visibility = [
        "//extensions/prost:__subpackages__",
    ],
    deps = [
        ":prost_runtime",
        "//extensions/prost/private/3rdparty/crates:tonic",
    ],
)

rust_prost_toolchain(
    name = "default_prost_toolchain_impl",
    compile_well_known_types = select({
        ":compile_well_known_types_setting": True,
        "//conditions:default": False,
    }),
    prost_plugin = "//extensions/prost/private/3rdparty/crates:protoc-gen-prost__protoc-gen-prost",
    prost_plugin_flag = "--plugin=protoc-gen-prost=%s",
    prost_runtime = ":prost_runtime",
    prost_types = "//extensions/prost/private/3rdparty/crates:prost-types",
    tonic_plugin = "//extensions/prost/private/3rdparty/crates:protoc-gen-tonic__protoc-gen-tonic",
    tonic_plugin_flag = "--plugin=protoc-gen-tonic=%s",
    tonic_runtime = ":tonic_runtime",
)

legacy_proto_toolchain(
    name = "legacy_proto_toolchain",
    visibility = ["//visibility:public"],
)
