load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//extensions/prost:defs.bzl", "rust_prost_library")

package(default_visibility = ["//extensions/prost/private/tests:__subpackages__"])

proto_library(
    name = "helloworld_proto",
    srcs = [
        "helloworld.proto",
    ],
)

rust_prost_library(
    name = "helloworld_rs_proto",
    proto = ":helloworld_proto",
)

rust_binary(
    name = "client",
    srcs = ["client.rs"],
    edition = "2021",
    deps = [
        ":helloworld_rs_proto",
        "@rules_rs//rs/private/prost",
        "@rules_rs//rs/private/prost:tokio",
        "@rules_rs//rs/private/prost:tonic",
    ],
)

rust_binary(
    name = "server",
    srcs = ["server.rs"],
    edition = "2021",
    deps = [
        ":helloworld_rs_proto",
        "@rules_rs//rs/private/prost",
        "@rules_rs//rs/private/prost:tokio",
        "@rules_rs//rs/private/prost:tonic",
    ],
)
